WIP: Resolve root contexts via source linkage
// FIXME; more work

JIRA: YANGTOOLS-1112
Change-Id: I25c87b95c7d83f12bbb8fed0f481072b33bfcb65
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>